=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - fixed a bug where cluster shows wrong state if the number of nodes gets 
   smaller than the minimum master nodes.

2015/10/07 0.14.6
=================

 - fixed a visual bug that let an item in the node/table list partly disappear
   if scrolling gets enabled

 - fixed URL to download in dropdown that notifies about old Crate version

 - fixed a bug that displays a zero value as NULL value

2015/09/17 0.14.5
=================

 - display ``NULL`` instead of empty cell in console results table

2015/09/07 0.14.4
=================

 - Updated Intercom to support new messaging features.
   The Intercom service is  disabled if UDC is disabled on the Crate server.

2015/08/06 0.14.3
=================

 - fixed line wrapping in console result table

2015/07/13 0.14.2
=================

 - added support for line breaks in console result table

2015/07/09 0.14.1
=================

 - fix: number of underreplicated shards were fetched and displayed incorrectly

2015/06/29 0.14.0
=================

 - load plugins.json that can inject additional modules on app start
   the "Get Started" tutorial is now implemented as a plugin

2015/06/23 0.13.4
=================

 - fix: approximate number of underreplicated and missing records per table was
   calculated incorrectly, which could have lead to different results
   when viewing table info on admin ui of different nodes

2015/06/22 0.13.3
=================

 - fix: automatically refresh load history chart on overview page

2015/06/15 0.13.2
=================

 - improved layout for smaller screens

 - fix: highlight cluster navigation item also when node is selected

 - fix: crate process cpu will now also display values greater than 100%

2015/06/09 0.13.1
=================

 - fix: load graph was not displayed when no tables where available

2015/06/09 0.13.0
=================
